--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,17 @@
   align-items: center;
 }
 
+.main2 {
+  min-height: 100vh;
+  padding: 5rem 0;
+  margin-left: 200px;
+  margin-right: 200px;
+  line-height: 1.7;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -29,7 +40,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #696969;
   text-decoration: none;
 }
 
@@ -73,6 +84,14 @@
   max-width: 800px;
 }
 
+.grid2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 1000px;
+}
+
 .card {
   margin: 1rem;
   padding: 1.5rem;
@@ -88,8 +107,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: orange;
+  border-color: orange;
 }
 
 .card h2 {
@@ -98,6 +117,66 @@
 }
 
 .card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+.card2 {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 300px;
+}
+
+.card2:hover,
+.card2:focus,
+.card2:active {
+  color: #7e5bef;
+  border-color: #7e5bef;
+}
+
+.card2 h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card2 p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+.card3 {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 300px;
+}
+
+.card3:hover,
+.card3:focus,
+.card3:active {
+  color: #13ce66;
+  border-color: #13ce66;
+}
+
+.card3 h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card3 p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
