--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,12 +15,15 @@
 .main2 {
   min-height: 100vh;
   padding: 5rem 0;
-  margin-left: 200px;
-  margin-right: 200px;
   line-height: 1.7;
   flex: 1;
   display: flex;
   flex-direction: column;
+}
+
+.main2 p {
+  margin-left: 200px;
+  margin-right: 200px;
 }
 
 .footer {
