--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,7 +21,12 @@
   flex-direction: column;
 }
 
-.main2 p {
+.main2 h2 {
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+.main2 ul {
   margin-left: 200px;
   margin-right: 200px;
 }
